--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 anyio==3.6.2
+bcrypt==4.0.1
 click==8.1.3
 fastapi==0.88.0
+fastapi-jwt-auth==0.5.0
 greenlet==2.0.1
 h11==0.14.0
 idna==3.4
+MarkupSafe==2.1.2
+passlib==1.7.4
 psycopg2-binary==2.9.5
 pydantic==1.10.2
+PyJWT==1.7.1
 python-dotenv==0.21.0
+python-multipart==0.0.5
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.45
 starlette==0.22.0
 typing_extensions==4.4.0
 uvicorn==0.20.0
+Werkzeug==2.2.2
