--- a/Pipfile
+++ b/Pipfile
@@ -5,47 +5,47 @@ name = "pypi"
 
 [packages]
 aiosmtplib = "==2.0.1"
-anyio = "==3.6.2"
-attrs = "==22.2.0"
-bcrypt = "==4.0.1"
-blinker = "==1.5"
-certifi = "==2022.12.7"
-click = "==8.1.3"
-dnspython = "==2.3.0"
-email-validator = "==1.3.1"
-exceptiongroup = "==1.1.0"
-fastapi = "==0.92.0"
-fastapi-jwt-auth = "==0.5.0"
-fastapi-mail = "==1.2.6"
-greenlet = "==2.0.1"
-h11 = "==0.14.0"
-httpcore = "==0.16.3"
-httpx = "==0.23.3"
-idna = "==3.4"
-iniconfig = "==2.0.0"
-jinja2 = "==3.1.2"
-markupsafe = "==2.1.2"
-packaging = "==23.0"
-passlib = "==1.7.4"
-pluggy = "==1.0.0"
-psycopg2-binary = "==2.9.5"
-pydantic = "==1.10.2"
-pyjwt = "==1.7.1"
-pytest = "==7.2.2"
-python-dateutil = "==2.8.2"
-python-dotenv = "==0.21.0"
-python-multipart = "==0.0.5"
-redbird = "==0.7.1"
-rfc3986 = "==1.5.0"
-rocketry = "==2.5.1"
-six = "==1.16.0"
-sniffio = "==1.3.0"
-sqlalchemy = "==1.4.45"
-starlette = "==0.25.0"
-tomli = "==2.0.1"
-typing-extensions = "==4.4.0"
-uvicorn = "==0.20.0"
-werkzeug = "==2.2.2"
+anyio = "3.6.2"
+attrs = "22.2.0"
+bcrypt = "4.0.1"
+blinker = "1.5"
+certifi = "2022.12.7"
+click = "8.1.3"
+dnspython = "2.3.0"
+email-validator = "1.3.1"
+exceptiongroup = "1.1.0"
+fastapi = "0.92.0"
+fastapi-jwt-auth = "0.5.0"
+fastapi-mail = "1.2.6"
+greenlet = "2.0.1"
+h11 = "0.14.0"
+httpcore = "0.16.3"
+httpx = "0.23.3"
+idna = "3.4"
+iniconfig = "2.0.0"
+jinja2 = "3.1.2"
+markupsafe = "2.1.2"
+packaging = "23.0"
+passlib = "1.7.4"
+pluggy = "1.0.0"
+psycopg2-binary = "2.9.5"
+pydantic = "1.10.2"
+pyjwt = "1.7.1"
+pytest = "7.2.2"
+python-dateutil = "2.8.2"
+python-dotenv = "0.21.0"
+python-multipart = "0.0.5"
+redbird = "0.7.1"
+rfc3986 = "1.5.0"
+rocketry = "2.5.1"
+six = "1.16.0"
+sniffio = "1.3.0"
+sqlalchemy = "1.4.45"
+starlette = "0.25.0"
+tomli = "2.0.1"
+typing-extensions = "4.4.0"
+uvicorn = "0.20.0"
+werkzeug = "2.2.2"
 
 [dev-packages]
 
